fixed the extra space in nav

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,12 @@
   width: 65px;
 }
 
+.brand-logo {
+  height: 65px;
+  width: 65px;
+}
+
+
 nav {
   background-color: #1a237e;
 }
